--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 .App {
-  height: 100vh;
-  background-color: #1a202c;
+  /* height: 100vh; */
+  padding: 120px 0;
+  background-color: #301934;
   overflow: scroll;
   text-align: center;
+  overflow-y: scroll;
 }
 
 .container {
@@ -69,11 +71,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
   bottom: 0;
   left: 0;
-  padding-bottom: 45px;
+  padding: 45px 0;
 }
 
 .twitter-logo {
@@ -89,7 +91,7 @@
 
 .gif-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 1.5rem;
   justify-items: center;
   margin: 0;
@@ -105,13 +107,15 @@
 }
 
 .gif-item img {
-  width: 100%;
-  height: 300px;
+  /* width: 100%;
+  height: 300px; */
+  width: 200px;
+  height: 200px;
   border-radius: 10px;
   object-fit: cover;
 }
 
-.connected-container input[type='text'] {
+.connected-container input[type="text"] {
   display: inline-block;
   color: white;
   padding: 10px;
