--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 .App {
-  /* height: 100vh; */
+  height: 100vh;
   padding: 120px 0;
   background-color: #301934;
-  overflow: scroll;
   text-align: center;
-  overflow-y: scroll;
 }
 
 .container {
